feat: Added swagger doc to signup and signin route
